--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "优易帮",
     "navigationBarTextStyle":"black"
   }
 }
